test/bad/grb2_val_pal-skd-dl_many_tsteps_gresol_bbox_gstep_proj.get
GET	/download?param=4&producer=pal_skandinavia_dl&format=grib2&starttime=20130917T1000&timesteps=4&gridresolution=18,18&bbox=15,58,38,71&gridstep=2,2&projection=latlon HTTP/1.0